// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestOverview should match receiver snapshot 1`] = `
.c1.c1.c1.c1.c1.c1.c1.c1.c1.c1.c1 {
  margin: 0px;
  padding: 16px 30px 30px 30px;
}

.c0.c0.c0.c0.c0.c0.c0.c0.c0.c0.c0 {
  height: 325px;
  width: unset;
  margin: 30px;
  padding-left: 0px;
  padding-rigth: 0px;
  -webkit-box-shadow: 0px 1px 11px -4px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 1px 11px -4px rgba(0,0,0,0.75);
  box-shadow: 0px 1px 11px -4px rgba(0,0,0,0.75);
}

.c2.c2.c2.c2.c2.c2.c2.c2.c2.c2.c2 {
  font-size: 11px;
  height: 21px;
  width: 549px;
  color: #1c2936;
  font-weight: 600;
  line-height: 21px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 24px;
  padding: 8px 0;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.c6 {
  line-height: 21px;
}

.c5 {
  display: inline-block;
  color: #5d768f;
  text-transform: uppercase;
  font-size: 11px;
  font-weight: 600;
  min-width: 150px;
  line-height: 21px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #1c2936;
}

<div
  className="ui card c0"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="content c1"
  >
    <div
      className="header c2"
    >
      REQUEST OVERVIEW
    </div>
    <div
      className="description "
    >
      <div
        className="c3"
      >
        <div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Counterparty
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="counteparty-name"
              >
                Applicant Name
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Received on
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="received-date"
              >
                12 Aug 2019 - 6:10 PM CET
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Due date
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="due-date"
              >
                -
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Last updated
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="last-updated-date"
              >
                12 Aug 2019 - 6:10 PM CET
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RequestOverview should match sender snapshot 1`] = `
.c1.c1.c1.c1.c1.c1.c1.c1.c1.c1.c1 {
  margin: 0px;
  padding: 16px 30px 30px 30px;
}

.c0.c0.c0.c0.c0.c0.c0.c0.c0.c0.c0 {
  height: 325px;
  width: unset;
  margin: 30px;
  padding-left: 0px;
  padding-rigth: 0px;
  -webkit-box-shadow: 0px 1px 11px -4px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 1px 11px -4px rgba(0,0,0,0.75);
  box-shadow: 0px 1px 11px -4px rgba(0,0,0,0.75);
}

.c2.c2.c2.c2.c2.c2.c2.c2.c2.c2.c2 {
  font-size: 11px;
  height: 21px;
  width: 549px;
  color: #1c2936;
  font-weight: 600;
  line-height: 21px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 24px;
  padding: 8px 0;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.c6 {
  line-height: 21px;
}

.c5 {
  display: inline-block;
  color: #5d768f;
  text-transform: uppercase;
  font-size: 11px;
  font-weight: 600;
  min-width: 150px;
  line-height: 21px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #1c2936;
}

<div
  className="ui card c0"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="content c1"
  >
    <div
      className="header c2"
    >
      REQUEST OVERVIEW
    </div>
    <div
      className="description "
    >
      <div
        className="c3"
      >
        <div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Counterparty
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="counteparty-name"
              >
                Applicant Name
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Sent on
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="sent-date"
              >
                12 Aug 2019 - 6:10 PM CET
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Due date
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="due-date"
              >
                -
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Last updated
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="last-updated-date"
              >
                12 Aug 2019 - 6:10 PM CET
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RequestOverview should match snapshot with - when dates does not exists 1`] = `
.c1.c1.c1.c1.c1.c1.c1.c1.c1.c1.c1 {
  margin: 0px;
  padding: 16px 30px 30px 30px;
}

.c0.c0.c0.c0.c0.c0.c0.c0.c0.c0.c0 {
  height: 325px;
  width: unset;
  margin: 30px;
  padding-left: 0px;
  padding-rigth: 0px;
  -webkit-box-shadow: 0px 1px 11px -4px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 1px 11px -4px rgba(0,0,0,0.75);
  box-shadow: 0px 1px 11px -4px rgba(0,0,0,0.75);
}

.c2.c2.c2.c2.c2.c2.c2.c2.c2.c2.c2 {
  font-size: 11px;
  height: 21px;
  width: 549px;
  color: #1c2936;
  font-weight: 600;
  line-height: 21px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 24px;
  padding: 8px 0;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.c6 {
  line-height: 21px;
}

.c5 {
  display: inline-block;
  color: #5d768f;
  text-transform: uppercase;
  font-size: 11px;
  font-weight: 600;
  min-width: 150px;
  line-height: 21px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #1c2936;
}

<div
  className="ui card c0"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="content c1"
  >
    <div
      className="header c2"
    >
      REQUEST OVERVIEW
    </div>
    <div
      className="description "
    >
      <div
        className="c3"
      >
        <div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Counterparty
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="counteparty-name"
              >
                Applicant Name
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Sent on
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="sent-date"
              >
                -
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Due date
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="due-date"
              >
                -
              </div>
            </div>
          </div>
          <div
            className="c4"
          >
            <span
              className="c5"
            >
              Last updated
            </span>
            <div
              className="c6"
            >
              <div
                data-test-id="last-updated-date"
              >
                -
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
